--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Practice testing with Jest",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "author": "",
   "license": "ISC",
